Nueva cabecera gris a 6 de febrero 2018
Eventos y actividades están ahora juntos en una sola página, digamos info-kollserola.
Cabeceraweb.php contiene todos los botones de navegación, donde hemos quitado los antiguos botones flyers y foro.
Semanario.php queda mejor ordenado.

--- a/ficha/casillasmisemana.html
+++ b/ficha/casillasmisemana.html
@@ -6,7 +6,7 @@ Este describe las casillas del semanario
 
 
 
-	<table class="casillaestilada" bgcolor="<?=${'color'.$s}?>" style="border:1px solid black;margin:5px" onclick="javascript:editardeunoenuno('formueditar<?=$s?>');" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
+	<table class="casillaestilada" bgcolor="<?=${'color'.$s}?>" style="border:1px solid black;margin:5px;width:120px" onclick="javascript:editardeunoenuno('formueditar<?=$s?>');" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
 		<tr><td><?=$losdias2[$s]?><hr class='barritaentrecosas'></td></tr>
 		<tr><td>
 			<div align="left" class="estilohoras"><?=${'h'.$s}?></div><div class="estilocosas"><?=$$s?></div>
