--- a/semanario/cadakolectivo.html
+++ b/semanario/cadakolectivo.html
@@ -1,6 +1,6 @@
 <?require ('../constantes.php');?>
 
-	<div align="center" style="border-collapse:collapse;width:30%;word-wrap: break-word;background-color:<?=$colortronco?>;padding:8px;opacity:0.8;min-height:40px;border:1px solid black" onclick="javascript:pantallita('kol<?=$id?>');" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
-		<?=$kolectivo?><div align="center"><font size="-1"><?=$mensaje?></font></div>
+	<div align="center" style="border-collapse:collapse;width:320px;word-wrap: break-word;background-color:<?=$colortronco?>;padding:8px;opacity:0.8;min-height:40px;border:1px solid black" onclick="javascript:pantallita('kol<?=$id?>');" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
+		<text style='font-family:Arial;color:black'><?=$kolectivo?><div align="center"><font size="-1"><?=$mensaje?></font></div></text>
 	</div>
 
