--- a/infok/flyer.html
+++ b/infok/flyer.html
@@ -9,18 +9,18 @@ if ($unDosVariosDias != '1') list ($dia1,$mesnumerico1,$ano1,$nombremes1,$nombre
 require('../constantes.php');?>
 
 
-<div class='cajitaflyer' style="background-color:<?=$colortronco?>;opacity:0.8" onclick="javascript:pantallita('evento<?=$id?>');" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
+<div class='cajitaflyer' style="background-color:<?=$colortronco?>;opacity:0.8" onclick="javascript:pantallita('evento<?=$id?>');document.getElementById('fade').style.display='block';" onmouseover="this.style.opacity = 1;" onmouseout="this.style.opacity =0.8;">
 
 	<table width='100%'><tr>
 		
-			<td>
+			<td valign='top'>
 				<?include 'fechitas.html';?>
 			</td>
 		
 		<!--Flyer (imagen)-->
 
-			<td width='40%' rowspan='2'>
-				<a href="../nubedeflyers/<?=$archivoFlyer?>"><img width='92px' style='margin:4px;max-height:180px' border='1' src="../nubedeflyers/<?=$archivoFlyer?>"></a>
+			<td width='94px' rowspan='2'>
+				<img width='92px' style='margin:1px;max-height:180px' border='1' src="../nubedeflyers/<?=$archivoFlyer?>">
 			</td></tr>
 
 			
@@ -31,11 +31,5 @@ require('../constantes.php');?>
 			
 
 	</table>
-		
-	<!--Pie de la ficha-->
-	
-		<hr class='barritaentrecosas'>
-		
-		<text class='maquina70'>Publicado por</text><text style='font-size:small'> <?=$publicador?></text>
 
 </div>
